tests/negative/gold/multiple_loop_variables_test.gold
tests/negative/multiple_loop_variables_test.toit:8:15: error: Definition of variable not allowed at this location
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
              ^~
tests/negative/multiple_loop_variables_test.toit:8:26: error: Definition of variable not allowed at this location
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                         ^~
tests/negative/multiple_loop_variables_test.toit:8:35: error: Unresolved identifier: 'x'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                  ^
tests/negative/multiple_loop_variables_test.toit:8:47: error: Unresolved identifier: 'y'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                              ^
tests/negative/multiple_loop_variables_test.toit:8:59: error: Can't assign to unknown 'x'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                                          ^
tests/negative/multiple_loop_variables_test.toit:8:63: error: Can't assign to unknown 'y'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                                              ^
tests/negative/multiple_loop_variables_test.toit:9:9: error: Unresolved identifier: 'x'
    foo x y
        ^
tests/negative/multiple_loop_variables_test.toit:9:11: error: Unresolved identifier: 'y'
    foo x y
          ^
tests/negative/multiple_loop_variables_test.toit:11:17: error: Definition of variable not allowed at this location
  while (foo (x := 499) (y := 42)):
                ^~
tests/negative/multiple_loop_variables_test.toit:11:28: error: Definition of variable not allowed at this location
  while (foo (x := 499) (y := 42)):
                           ^~
tests/negative/multiple_loop_variables_test.toit:12:5: error: Can't assign to unknown 'x'
    x++
    ^
tests/negative/multiple_loop_variables_test.toit:13:5: error: Can't assign to unknown 'y'
    y++
    ^
tests/negative/multiple_loop_variables_test.toit:11:10: error: Condition can't be 'none'
  while (foo (x := 499) (y := 42)):
         ^~~
Compilation failed.
